# Languages-and-Automata

./: .gitignore  CMakeLists.txt  Disclaimer.MD  Genre.h  LICENSE.md  README.md  Song.h  TA brainstorm.odt  doyxgen_docs_config  main.cpp
Administration/Documentation/html/: Administration_2ProjectVoorstel_2Example_01Classes_2Genre_8cpp__incl.dot  Administration_2ProjectVoorstel_2Example_01Classes_2Genre_8h_source.html  Administration_2ProjectVoorstel_2Example_01Classes_2Note_8cpp__incl.dot  Administration_2ProjectVoorstel_2Example_01Classes_2Note_8h.html  Administration_2ProjectVoorstel_2Example_01Classes_2Note_8h__incl.dot  Administration_2ProjectVoorstel_2Example_01Classes_2Note_8h_source.html  ButtonBool_8h__dep__incl.dot  ButtonBool_8h_source.html  (+502 more)
Administration/ProjectVoorstel/: Presentatie3(1).pptx
Administration/VoortgangsRapporten/: TO-groep voortgangsrapport10.xlsx  TO-groep voortgangsrapport11.xlsx  TO-groep voortgangsrapport12.xlsx  TO-groep voortgangsrapport13.xlsx  TO-groep voortgangsrapport8.xlsx  TO-groep voortgangsrapport9.xlsx  Tog I am listening.xlsx
TA-lib/: DFA.h  ENFA.cpp  ENFA.h  RE.cpp  RE.h
html/: Administration_2ProjectVoorstel_2Example_01Classes_2Genre_8cpp.html  Administration_2ProjectVoorstel_2Example_01Classes_2Genre_8h.html  Administration_2ProjectVoorstel_2Example_01Classes_2Genre_8h__dep__incl.dot  Administration_2ProjectVoorstel_2Example_01Classes_2Genre_8h__incl.dot  Administration_2ProjectVoorstel_2Example_01Classes_2Note_8cpp.html  Administration_2ProjectVoorstel_2Example_01Classes_2Note_8h__dep__incl.dot  Administration_2ProjectVoorstel_2Example_01Classes_2Song_8h.html  Administration_2ProjectVoorstel_2Example_01Classes_2Song_8h__dep__incl.dot  ButtonBool_8cpp.html  ButtonBool_8cpp__incl.dot  ButtonBool_8h.html  ButtonBool_8h__incl.dot  ButtonCompare_8cpp.html  ButtonCompare_8h__dep__incl.dot  ButtonCompare_8h_source.html  Button_8h__dep__incl.dot  Button_8h_source.html  ByteX_8cpp__incl.dot  ByteX_8h.html  ByteX_8h__dep__incl.dot  ByteX_8h__incl.dot  DFAE_8cpp__incl.dot  DFAE_8h.html  DFAT_8cpp__incl.dot  DFAT_8h.html  DFAT_8h__incl.dot  DFAT_8h_source.html  DesignByContract_8h.html  DesignByContract_8h__dep__incl.dot  Gui_8cpp.html  MidiParser_8h__dep__incl.dot  MidiParser_8h_source.html  NFAE_8cpp.html  NFAE_8h.html  Node_8cpp.html  Node_8h__incl.dot  Parser_8cpp.html  Parser_8h__incl.dot  PctScreen_8cpp.html  PctScreen_8cpp__incl.dot  (+191 more)
html/search/: all_13.js  all_14.js  all_16.js  all_4.js  all_6.js  all_8.js  all_b.js  all_d.js  classes_0.js  classes_11.js  classes_13.js  classes_2.js  classes_6.js  classes_9.js  classes_c.js  classes_d.js  defines_2.js  enums_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_8.js  enumvalues_9.js  enumvalues_c.js  enumvalues_d.js  enumvalues_e.js  files_3.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_4.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_e.js  functions_f.js  namespaces_0.js  (+15 more)
lib/: DesignByContract.h  Utils.cpp  Utils.h
lib/Toi Anas/: ENFA.cpp  RE.cpp
lib/Toi Emil/: DFA.cpp  NFA.h  Node.cpp  automaat.cpp
lib/Toi Kars/: DFA.cpp  DFA.h  NFA.cpp  NFA.h  State.h  Utils.h  transitiefunctie.cpp  transitiefunctie.h
lib/Toi Tibo/: DFA.cpp  ENFA.cpp
lib/Toi_Anas/: DFA.cpp  RE.cpp  RE.h
lib/Toi_Emil/: DFA.h  DFAE.cpp  DFAE.h  NFA.cpp  NFA.h  NFAE.cpp  NFAE.h  Node.cpp  Node.h  RE.cpp  RE.h  REE.cpp  REE.h  WDFA.cpp  WDFA.h  WNFA.cpp  WNFA.h  automaat.cpp  automaat.h  weightedNode.cpp  weightedNode.h  weightedautomaat.cpp  weightedautomaat.h
lib/Toi_Kars/: State.cpp  State.h  Utils.cpp
lib/Toi_Tibo/: DFA.h  DFAT.cpp  DFAT.h  ENFA.h  ENFAT.cpp  ENFAT.h
src/: DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  ENFAT.cpp  ENFAT.h  Genre.cpp  Genre.h  NFA.cpp  NFA.h  Note.cpp  Note.h  RE.cpp  RE.h  REGEX.cpp  REGEX.h  Song.cpp  Song.h  WDFA.cpp  WDFA.h  WNFA.cpp  WNFA.h  weightedNode.cpp  weightedNode.h
src/gui/: Button.cpp  Button.h  ButtonBool.cpp  ButtonBool.h  ButtonCompare.cpp  ButtonCompare.h  ButtonSave.cpp  ButtonSave.h  Gui.cpp  Gui.h  PctScreen.cpp  PctScreen.h  SongListWidget.cpp  SongListWidget.h  SongListWidgetSingle.cpp  SongListWidgetSingle.h  SongWidget.cpp  SongWidget.h
src/midiparser/: ByteX.cpp  ByteX.h  MidiParser.cpp  MidiParser.h  SongExporter.cpp  SongExporter.h  midiExporter.cpp  midiExporter.h
testing/: testing.cpp
working/: JSONWORK.json  JSONWORK2.json  README.MD  demo.txt  filelist.txt  filelist2.txt  filelist2nd.txt  filelist3.txt  filelistAnas.txt  filelistEmil.txt  filelistKars.txt  filelistTibo.txt  filelistdemo.txt
working/automata/: NFA_fix.json  WNFA_balance_test.json  dfa.json  dfa2.json  nfa.json
working/midi_broken/: White_Park_Zone.mid
working/midi_files/: 09_-_Cool_Beat.mid  57269_1.mid  ACNH Trailer Music - Piano MIDI.mid  AHiT_Rush_Hour_by_fakt13.mid  AUD_MB1571.mid  Apex Legends - Main Theme (Piano Cover) - MIDI.mid  Aurora_Area.mid  BGM_2_Please_upgrade_it.mid  Battle_Ghetsis_v2_1.mid  Battle_Team_Plasma_Pokemon_Black_White.mid  D E3M8.mid  DanceTilYoureDeadMidi.mid  Darkest_Lord.mid  GM_25_Act_2_Boss.mid  Green_Hill_Zone_Sonic_The_Hedgehog.mp3.mid  HarryPotterPrologue(3).mid  Invisible_SK_EXVS.mid  KirbySuperStarUltra-RevengeOfTheKingEnding.mid  MLDT-Normal_Battle.mid  MLDT-This__Moment_Can_Not_Be_Careless.mid  MaLDTB_DreamBattleTheme_AltEx.mid  Mario_and__Luigi_Dream_Team_Adventures_end (1).mid  Mega_Man_X5_-_Zero_Virus_Stage_2.mid  MetalSlug4BossTheme2.mid  MetalSlug4Mission5.mid  Mtrd_Brinstar-DalekSam.mid  Neo_Bowser_Castle_Mario_and_Luigi_Dream_Team.mid  Ninja_Hideaway.mid  Ontiva.com_The_Xbox_Dance_Darby_and_Lair_Clips.midi  Plantera.mid  Pokemon_SWSH_Gym_Leader.mid  Ratchet_and_Clank_2_-_Megapolis.mid  Rayman_Origins_-_Swinging_caves_MIDI.mid  RmOrigins_ChasingADream.mid  Route_209_Pokemon_Legends_Arceus.mid  Sacred_Dark.mid  Sonic_CD_-_Wacky_Workbench_Past.mid  Sonic_the_hedgehog_a_final_battle.mid  Splash_Hill_Zone_Act_1_XG_fixed.mid  StarFox_Training_Mode.mid  (+44 more)
working/midi_output/: Product.mid
working/tiboEnv/: WNFA_balance_test.json
(+158 files in other folders)
